2021-08-20  Philippe Normand  <pnormand@igalia.com>

        REGRESSION(r280732) [GStreamer] fast/mediastream/getDisplayMedia-max-constraints1.html and other are failing
        https://bugs.webkit.org/show_bug.cgi?id=228941

        Reviewed by Youenn Fablet.

        * platform/glib/TestExpectations: Unflag tests now passing.

2021-08-20  Youenn Fablet  <youenn@apple.com>

        Add support for RTCPeerConnection.canTrickleIceCandidates
        https://bugs.webkit.org/show_bug.cgi?id=229287

        Reviewed by Eric Carlson.

        * webrtc/rtcpeerconnection-error-messages-expected.txt:

2021-08-19  Tim Nguyen  <ntim@apple.com>

        Implement top layer rendering bits
        https://bugs.webkit.org/show_bug.cgi?id=84796

        Reviewed by Simon Fraser.

        Enabled relevant WPTs. Some WPTs need extra layout work.

        * TestExpectations:

2021-08-19  Myles C. Maxfield  <mmaxfield@apple.com>

        [Cocoa] Stop honoring any dot-prefixed font names
        https://bugs.webkit.org/show_bug.cgi?id=228177

        Reviewed by Sam Weinig.

        * fast/text/font-lookup-dot-prefix-case-sensitive-expected.html: Renamed from LayoutTests/fast/text/font-lookup-dot-prefix-case-sensitive-expected-mismatch.html.
        * platform/ios/TestExpectations:
        * platform/mac/TestExpectations:

2021-08-19  Myles C. Maxfield  <mmaxfield@apple.com>

        [Cocoa] Stop treating the system font as a non-variable font
        https://bugs.webkit.org/show_bug.cgi?id=228176

        Reviewed by Sam Weinig.

        Update tests.

        * fast/text/resources/Ahem-trak.ttf: Added. This is a font which has a trak table.
        * fast/text/trak-optimizeLegibility-expected-mismatch.html: Added.
        * fast/text/trak-optimizeLegibility-expected.txt: Removed.
        * fast/text/trak-optimizeLegibility.html:
        * fast/text/variable-system-font-2-expected-mismatch.html: Added.
        * fast/text/variable-system-font-2.html: Added.