@@ -171,9 +171,6 @@ static void printReason(AvoidanceReason reason, TextStream& stream)
     case AvoidanceReason::FlowHasBorderFitLines:
         stream << "-webkit-border-fit";
         break;
-    case AvoidanceReason::FlowHasNonAutoLineBreak:
-        stream << "line-break is not auto";
-        break;
     case AvoidanceReason::FlowHasTextSecurity:
         stream << "text-security is not none";
         break;
@@ -576,8 +573,6 @@ static OptionSet<AvoidanceReason> canUseForStyle(const RenderStyle& style, Inclu
         SET_REASON_AND_RETURN_IF_NEEDED(FlowHasTextFillBox, reasons, includeReasons);
     if (style.borderFit() == BorderFit::Lines)
         SET_REASON_AND_RETURN_IF_NEEDED(FlowHasBorderFitLines, reasons, includeReasons);
-    if (style.lineBreak() != LineBreak::Auto)
-        SET_REASON_AND_RETURN_IF_NEEDED(FlowHasNonAutoLineBreak, reasons, includeReasons);
     // Special handling of text-security:disc is not yet implemented in the simple line layout code path.
     // See RenderBlock::updateSecurityDiscCharacters.
     if (style.textSecurity() != TextSecurity::None)
