@@ -1,5 +1,17 @@
 2021-08-20  Alan Bujtas  <zalan@apple.com>
 
+        [IFC][Integration] Enable non-auto line-break values
+        https://bugs.webkit.org/show_bug.cgi?id=228842
+
+        Reviewed by Antti Koivisto.
+
+        IFC already supports line-break.
+
+        * layout/integration/LayoutIntegrationCoverage.cpp:
+        (WebCore::LayoutIntegration::canUseForStyle):
+
+2021-08-20  Alan Bujtas  <zalan@apple.com>
+
         [LFC][IFC] Add support for -webkit-nbsp-mode: space
         https://bugs.webkit.org/show_bug.cgi?id=228805
 
