@@ -1,3 +1,13 @@
+2021-08-20  Alan Bujtas  <zalan@apple.com>
+
+        [IFC][Integration] Enable non-auto line-break values
+        https://bugs.webkit.org/show_bug.cgi?id=228842
+
+        Reviewed by Antti Koivisto.
+
+        * TestExpectations: progressions
+        * platform/mac/fast/text/trailing-white-space-expected.txt: collapsed trailing whitespace cleanup.
+
 2021-08-20  Philippe Normand  <pnormand@igalia.com>
 
         REGRESSION(r280732) [GStreamer] fast/mediastream/getDisplayMedia-max-constraints1.html and other are failing
